dnl Process this file with autoconf to produce a configure script.
AC_INIT(reflector.c)

AC_CANONICAL_SYSTEM

AC_PROG_CC

AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(nsl,    main)
AC_CHECK_LIB(dl,    main)
AC_SUBST(LIBS)

# X 
#------------------------------------------------------------------------------
# Use autoconf inbuilt X location.  Works v. nicely.  Substitution of X vars
# comes after broken X11 header check and attempted fix.
#------------------------------------------------------------------------------
AC_PATH_XTRA

#------------------------------------------------------------------------------
# Check if X headers are broken.  GCC 2.95 and up reject headers that don't
# have omit types, X11 headers have implicit int declarations on some systems
# (e.g. Solaris).
#------------------------------------------------------------------------------
AC_CACHE_CHECK(whether X11 headers are broken, x11_cv_broken_headers, [
	SAVED_CFLAGS=$CFLAGS
	CFLAGS="$X_CFLAGS $CFLAGS"
	AC_TRY_COMPILE([#include <X11/Xlib.h>
	#include <X11/Xutil.h>],
	return 0,
	x11_cv_broken_headers=no,
	x11_cv_broken_headers=yes)
	CFLAGS=$SAVED_CFLAGS
]);

#------------------------------------------------------------------------------
# If X headers look broken, check if we can use -istdinc.  If so replace 
# -IXDIR with -istdincXDIR to suppress warnings.  NB it is possible to use
# -fpermissive, but not in conjunction with -Werror since warnings are still
# generated.  Could pull local headers through:
#			 's/^\(extern\) \([[A-Za-z0-9]]*($\)/\1 int \2/' 
#------------------------------------------------------------------------------
if test $x11_cv_broken_headers = yes -a $GCC = "yes" ; then
	SAVED_X_CFLAGS=X_CFLAGS
	X_CFLAGS=`echo $X_CFLAGS | sed 's%-I%-istdinc%'`
	AC_CACHE_CHECK(whether -istdinc fixes X11 headers, x11_cv_gcc_istdinc_works, [
		SAVED_CFLAGS=$CFLAGS
		CFLAGS="$X_CFLAGS $CFLAGS"
		AC_TRY_COMPILE([#include <X11/Xlib.h>
		#include <X11/Xutil.h>],
		return 0,
		x11_cv_gcc_istdinc_works=yes,
		x11_cv_gcc_istdinc_works=no)
		CFLAGS=$SAVED_CFLAGS
	])
	if test $x11_cv_gcc_istdinc_works = no ; then
		X_CFLAGS=$SAVED_X_CFLAGS
	fi
fi

AC_SUBST(X_CFLAGS)
AC_SUBST(X_LIBS)
AC_SUBST(X_EXTRA_LIBS)
AC_SUBST(X_PRE_LIBS)

# TCL/TK 
#------------------------------------------------------------------------------
# We could be dealing with a source installation or a full installation.
# Expect a source installation to have headers in TCL8_HOME/generic and libs in
# TCL8_HOME/unix.  A full installation should have headers in 
# INSTDIR/include/tcl8.0, or INSTDIR/include, and have libraries be in 
# INSTDIR/lib.
#------------------------------------------------------------------------------
PARENT=`echo $PWD | sed -e 's%/[[^/]]*$%%'`
TCL_INC=${PARENT}/tcl-8.0
TCL_LIB=${PARENT}/tcl-8.0

AC_ARG_WITH(tcl,           
	[  --with-tcl=DIR          specify location of Tcl installation],
	[TCL_INC=$withval
	 TCL_LIB=$withval])

#-----------------------------------------------------------------------------
# Depending on config expect tcl.h to be tcl source dir or include path
#-----------------------------------------------------------------------------
for i in $TCL_INC/generic $TCL_INC/include/tcl8.0 $TCL_INC/include $TCL_INC
do
	if test -d $i ; then
		TCL_INC=$i
		break
	fi
done

AC_CHECK_HEADER(${TCL_INC}/tcl.h,
	TCL_INC=-I${TCL_INC},
	TCL_INC=no)

if test "$TCL_INC" = no 
then
	echo "Could not find tcl.h.  One of the following halted progress:"
	echo "   (a) Tcl is not installed."
	echo "   (b) Tcl's location was mis-specified, or not specified (--with-tcl=DIR)."
	echo "   (c) this script failed to see it (please inform rat-trap@cs.ucl.ac.uk)."
	exit
fi

#-----------------------------------------------------------------------------
# Guess most probable tcl lib location
#-----------------------------------------------------------------------------
for i in $TCL_LIB/unix $TCL_LIB/lib $TCL_LIB
do
	if test -d $i ; then
		TCL_LIB=$i
		break
	fi
done

SAVED_LIBS=$LIBS
LIBS=""
FOUND_TCL_LIB=no
AC_SEARCH_LIBS(Tcl_Init, tcl8.0 tcl80, 
	FOUND_TCL_LIB=yes,
	, 
	-L${TCL_LIB} ${SAVED_LIBS} -lm)
TCL_LIB="-L${TCL_LIB} $LIBS"
LIBS=$SAVED_LIBS

if test $FOUND_TCL_LIB = no
then
	echo "Could not find Tcl library.  One of the following halted progess:"
	echo "   (a) Tcl is not installed."
	echo "   (b) Library is not built or not in expected location (--with-tcl=DIR)."
	echo "   (c) this script failed to see it (please inform rat-trap@cs.ucl.ac.uk)."
	exit
fi

TK_INC=${PARENT}/tk-8.0
TK_LIB=${PARENT}/tk-8.0

AC_ARG_WITH(tk,           
	[  --with-tk=DIR           specify location of Tk installation],
	[TK_INC=$withval
	 TK_LIB=$withval])
#-----------------------------------------------------------------------------
# Depending on config expect tk.h to be tk source dir or include path
# AC_CHECK_HEADER(S) are totally inadequate since it is necessary to
# include tcl.h, Xlib.h, Xutil.h before tk.h.
#-----------------------------------------------------------------------------
FOUND_TK_INC=0
for i in $TK_INC/generic $TK_INC/include/tk8.0 $TK_INC/include $TK_INC
do
	AC_MSG_CHECKING(for $i/tk.h)
	if test -r $i/tk.h ; then
		TK_INC=-I$i
		FOUND_TK_INC=1
		AC_MSG_RESULT(yes)
		break
	fi
	AC_MSG_RESULT(no)
done

if test $FOUND_TK_INC = 0 ; then
	echo "Could not find tk.h.  One of the following halted progress:"
	echo "   (a) Tk is not installed."
	echo "   (b) Tk's location was mis-specified, or not specified (--with-tk=DIR)."
	echo "   (c) this script failed to see it (please inform rat-trap@cs.ucl.ac.uk)."
	exit
fi

# Guess most probable tk lib location
for i in $TK_LIB/unix $TK_LIB/lib $TK_LIB
do
	if test -d $i ; then
		TK_LIB=$i
		break
	fi
done

SAVED_LIBS=$LIBS
LIBS=""
FOUND_TK_LIB=no
AC_SEARCH_LIBS(Tk_Init, tk8.0 tk80,
	FOUND_TK_LIB=yes,
	,
	-L${TK_LIB} ${TCL_LIB} $X_LIBS $X_PRE_LIBS  -lXext -lX11 $X_EXTRA_LIBS ${SAVED_LIBS} -lm)
TK_LIB="-L${TK_LIB} $LIBS"
LIBS=$SAVED_LIBS

if test $FOUND_TK_LIB = no
then
	echo "Could not find Tk library.  One of the following halted progess:"
	echo "   (a) Tk is not installed."
	echo "   (b) Library is not built or not in expected location (--with-tk=DIR)."
	echo "   (c) this script failed to see it (please inform rat-trap@cs.ucl.ac.uk)."
	exit
fi

AC_SUBST(TCL_INC)
AC_SUBST(TCL_LIB)
AC_SUBST(TK_INC)
AC_SUBST(TK_LIB)
AC_OUTPUT(Makefile)
